Mrenna overall changes
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@279 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1,3 +1,8 @@
+
+
+
+
+
 %%%%%%%%%%%%%%%%Test
 
 @article{dijetHarris,
@@ -17,6 +22,39 @@
 }
 
 %%%%%%%%%%%%%%%%monojet
+
+@article{Feng:2005gj,
+      author         = "Feng, Jonathan L. and Su, Shufang and Takayama, Fumihiro",
+      title          = "{Lower limit on dark matter production at the large
+                        hadron collider}",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "96",
+      pages          = "151802",
+      doi            = "10.1103/PhysRevLett.96.151802",
+      year           = "2006",
+      eprint         = "hep-ph/0503117",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UCI-TR-2005-11",
+      SLACcitation   = "%%CITATION = HEP-PH/0503117;%%",
+}
+
+@article{Beltran:2010ww,
+      author         = "Beltran, Maria and Hooper, Dan and Kolb, Edward W. and
+                        Krusberg, Zosia A.C. and Tait, Tim M.P.",
+      title          = "{Maverick dark matter at colliders}",
+      journal        = "JHEP",
+      volume         = "1009",
+      pages          = "037",
+      doi            = "10.1007/JHEP09(2010)037",
+      year           = "2010",
+      eprint         = "1002.4137",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-10-092-A",
+      SLACcitation   = "%%CITATION = ARXIV:1002.4137;%%",
+}
+
 
 @article{Haisch:2015ioa,
       author         = "Haisch, Ulrich and Re, Emanuele",
@@ -59,7 +97,24 @@
 }
 
 
-%%%%%%%%%%%%%%%%EFT references 
+%%%%%%%%%%%%%%%%EFT references
+@article{Shoemaker:2011vi,
+      author         = "Shoemaker, Ian M. and Vecchi, Luca",
+      title          = "{Unitarity and Monojet Bounds on Models for DAMA, CoGeNT,
+                        and CRESST-II}",
+      journal        = "Phys.Rev.",
+      volume         = "D86",
+      pages          = "015023",
+      doi            = "10.1103/PhysRevD.86.015023",
+      year           = "2012",
+      eprint         = "1112.5457",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LA-UR-11-12298",
+      SLACcitation   = "%%CITATION = ARXIV:1112.5457;%%",
+}
+
+
 
 @article{Goodman:2010ku,
       author         = "Goodman, Jessica and Ibe, Masahiro and Rajaraman, Arvind
@@ -269,9 +324,8 @@
       SLACcitation   = "%%CITATION = ARXIV:1404.0051;%%",
 }
 
-
-
 @article{Aad:2014tda,
+      author         = "Aad, Georges and others",
       title          = "{Search for new phenomena in events with a photon and
                         missing transverse momentum in $pp$ collisions at
                         $\sqrt{s}=8$ TeV with the ATLAS detector}",
@@ -288,6 +342,8 @@
       reportNumber   = "CERN-PH-EP-2014-245",
       SLACcitation   = "%%CITATION = ARXIV:1411.1559;%%",
 }
+
+
 
 @article{ATLAS:2014wra,
       author         = "Aad, Georges and others",
@@ -430,33 +486,22 @@
       SLACcitation   = "%%CITATION = ARXIV:1407.8257;%%",
 }
 
-@ARTICLE{Chang:2014,
-  AUTHOR       = "Spencer Chang and Ralph Edezhath and Jeffrey Hutchinson and Markus Luty",
-  TITLE        = "{Effective WIMPs}",
-  JOURNAL      = "Phys. Rev. D",
-  VOLUME       = "89",
-  ISSUE        = "",
-  PAGES        = "015011",
-  YEAR         = "2014",
+@article{Chang:2013oia,
+      author         = "Chang, Spencer and Edezhath, Ralph and Hutchinson,
+                        Jeffrey and Luty, Markus",
+      title          = "{Effective WIMPs}",
+      journal        = "Phys.Rev.",
+      number         = "1",
+      volume         = "D89",
+      pages          = "015011",
+      doi            = "10.1103/PhysRevD.89.015011",
+      year           = "2014",
+      eprint         = "1307.8120",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1307.8120;%%",
 }
-@ARTICLE{Bai:201311171,
-  AUTHOR       = "Yang Bai and Joshua Berger",
-  TITLE        = "{Fermion Portal Dark Matter}",
-  JOURNAL      = "JHEP",
-  VOLUME       = "11",
-  ISSUE        = "",
-  PAGES        = "171",
-  year         = "2013",
-}
-@ARTICLE{An:201489115014,
-  AUTHOR       = "Haipeng An and Lian-Tao Wang and Hao Zhang",
-  TITLE        = "{Dark matter with $t$-channel mediator: a simple step beyond contact interaction}",
-  JOURNAL      = "Phys. Rev. D",
-  VOLUME       = "89",
-  ISSUE        = "",
-  PAGES        = "115014",
-  year         = "2014",
-}
+
 @article{Busoni:2014haa,
       author         = "Busoni, Giorgio and De Simone, Andrea and Jacques, Thomas
                         and Morgante, Enrico and Riotto, Antonio",
@@ -1378,6 +1423,24 @@
 	SLACcitation   = "%%CITATION = ARXIV:1406.5542;%%",
 }
 
+@article{Aaltonen:2012jb,
+      author         = "Aaltonen, T. and others",
+      title          = "{A Search for dark matter in events with one jet and
+                        missing transverse energy in $p\bar{p}$ collisions at
+                        $\sqrt{s} = 1.96$ TeV}",
+      collaboration  = "CDF",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "108",
+      pages          = "211804",
+      doi            = "10.1103/PhysRevLett.108.211804",
+      year           = "2012",
+      eprint         = "1203.0742",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "SLAC-PUB-15067, FERMILAB-PUB-12-060-E",
+      SLACcitation   = "%%CITATION = ARXIV:1203.0742;%%",
+}
+
 @article{Kraml:2012sg,
 	author         = "Kraml, S. and Allanach, B.C. and Mangano, M. and Prosper,
 	H.B. and Sekmen, S. and others",
@@ -1868,4 +1931,15 @@
       reportNumber   = "CERN-PH-TH-2011-147, CP3-11-20, NSF-KITP-11-114,
                         ZH-TH-13-11",
       SLACcitation   = "%%CITATION = ARXIV:1106.6019;%%",
+}
+
+# Reference for treatment of width
+
+@article{Bardin:1989qr,
+      author         = "Bardin, Dmitri Yu. and Bilenky, Mikhail S. and Beenakker,
+                        W. and Berends, Frits A. and van Neerven, W.L. and others",
+      title          = "{Z LINE SHAPE}",
+      year           = "1989",
+      reportNumber   = "CERN-TH-5468-89",
+      SLACcitation   = "%%CITATION = CERN-TH-5468-89 ETC.;%%",
 }
