--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -82,7 +82,8 @@
 }
 \newcommand{\blankpage}{\newpage\hbox{}\thispagestyle{empty}\newpage}
 \makeatletter
-\title{ATLAS+CMS Dark Matter Forum Recommendations} 
+\title{Dark Matter Benchmark Models for Early LHC Run-2 Searches:
+  Report~of~the~Spring~2015 ATLAS/CMS~Dark~Matter~Forum}
 \author{ATLAS+CMS Dark Matter Forum}
 \date{\today}
 \usepackage{titling}
@@ -127,7 +128,7 @@
 \input{tex/EWSpecificModels}
 
 
-\chapter{Validity of EFT approach}
+\chapter{Presentation of EFT results}
 \label{sec:EFTValidity} 
 \input{tex/EFTValidity.tex}
 
