--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -15,8 +15,8 @@ The EFT operators considered in this section do not have a simplified model
 completion for Dirac fermion Dark Matter available to date. 
 They provide kinematic distributions that 
 are unique to mono-boson signatures, and that in most cases 
-are not reproduced by an equivalent simplified model~\footnote{Wherever this is
-the case, we recommend only generation of simplified model result as that can be reinterpreted.}. 
+are not reproduced by an equivalent simplified model.\footnote{Wherever this is
+the case, we recommend only generation of simplified model result as that can be reinterpreted.}
 
 A complete list of effective operators with direct DM/boson couplings for
 Dirac DM, up to dimension 7, can be found in~\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva}. 
@@ -79,16 +79,16 @@ from this category have a Lagrangian that includes terms such as:
 + \frac{m_Z^2}{2 \Lambda_5^3} ~ \bar{\chiDM} \chiDM ~ Z^\mu Z_\mu ~,
 \end{eqnarray}
 where $m_Z$ and $m_W$ are the masses of the $Z$ and $W$ boson, $W^{\mu}$ and $Z^{\mu}$
-are the fields of the gauge bosons, $\chiDM$ denote the Dark Matter fields
+are the fields of the gauge bosons, $\chiDM$ denotes the Dark Matter fields
 and $\Lambda_5$ is the effective field theory scale~\Todo{The nomenclature in different models differs from literature: 
 	$\Lambda_5$ vs $\lambda$}. Note that these operators are of true dimension 7, 
 but reduce to effective dimension 5 once the Higgs vacuum expectation values, 
 contained in the W and Z mass terms, are inserted.  
 As such, one expects  these that operators would naturally arise in UV complete models where Dark Matter 
-interacts via a Higgs portal where heavy mediators would couple to the Higgs or other fields in an extended Higgs sector. 
+interacts via a Higgs portal where heavy mediators couple to the Higgs or other fields in an extended Higgs sector. 
 In such models the full theory may be expected to contain additional operators with Higgs-Dark Matter couplings~\cite{Djouadi:2012zc}.
 
-Concentrating  for the moment on mono-gauge boson signals, the above operator induces signatures with 
+Concentrating on mono-gauge boson signals, the above operator induces signatures with 
 \MET in conjunction with Z and W bosons at tree level,
 while at loop level it induces couplings to photon pairs and $Z \gamma$ through W loops.
 In these models, a clear relation exists between final states with photons, EW bosons
@@ -295,7 +295,7 @@ a representative dimension-8 operators can be chosen as benchmark, with the form
 $$\frac{1}{\Lambda^4} \bar{\chiDM} \gamma^{\mu} \chiDM B_{\mu \nu} H^{\dagger} D^{\nu} H$$
 
 In this case, the new physics scale is $\Lambda$ is connected with the coupling
-of the DM as $y_{\chiDM} = \frac{1}{\Lambda^{4}}$.Todo{Is more detail needed here?}
+of the DM as $\displaystyle y_{\chiDM} = \frac{1}{\Lambda^{4}}$.\Todo{Is more detail needed here?}
 An advantage of this operator is that it includes all signatures with EW bosons,
 allowing to assess the relative sensitivity of the various channels with the same model.  
 The kinematics for this operator is different with respect to other operators,
