--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -7,8 +7,11 @@
 
 
 All models detailed in this Section are applicable to signatures states where 
- a photon, a W boson, a Z boson or a Higgs boson are radiated instead of a gluon. 
+ a photon, a W boson, a Z boson or a Higgs boson
+ is radiated from the initial state partons instead of a gluon. 
 The experimental signature is identified as \textit{V+\MET}.
+
+\Todo{Add link to section describing EW bosons from a blob.}
 
 Monojet searches are generally more sensitive
 with respect to final states including bosons, due to the much
@@ -36,7 +39,7 @@ still worth comparing with searches in the jet+\MET final state.
 % the D1 (scalar SM/WIMP interaction), D5 (vector-vector interaction) and D9
 % (tensor interaction) operator.
 
-In the case of a vector mediator exchanged in the \schannel, 
+In the case of a spin-1 mediator,
 an example Feynman diagram for these processes can be constructed by taking
 Fig.~\ref{fig:OP} and replacing the gluon with $\gamma,W$ or $Z$.
 The interest for searches with W bosons in the final state
@@ -45,9 +48,9 @@ for certain choices of couplings for a spin-1 mediator~\cite{Bai:2012xg}.
 Run-1 searches have considered three sample cases for the product of
 up and down quark couplings to the mediator, denoted as $\xi$:
 \begin{itemize}
- \item[$\xi=0$:] No couplings between mediator and either up or down quarks;
- \item[$\xi=1$:] Same coupling between mediator and each of the quark types;
- \item[$\xi=-1$:] Coupling of opposite sign between mediator and each of the quark types.
+ \item[$\xi=0$:] Mediator couples to up-type or down-type quarks, but not both;
+ \item[$\xi=1$:] Mediator couples to up-type and down-type quarks with same strength;
+ \item[$\xi=-1$:] Mediator couples to up-type and down-type quarks with same strength, but opposite sign.
 \end{itemize}
 The $\xi=-1$ case leads to a large increase in the cross-section of the process,
 and modifies the spectrum of missing transverse energy or
@@ -55,7 +58,7 @@ transverse mass used for the searches. The sensitivity of the W+\MET search for
 this benchmark in this case surpasses that of the jet+\MET search.
 However, as shown in Ref.~\cite{Bell:2015sza}, the cross-section increase is due
 to the production of longitudinally polarized W bosons,
-as a consequence of a violation of electroweak gauge symmetries. Unless further
+in violation of electroweak gauge symmetries. Unless further
 particles are introduced (in a fashion similar
 to the Higgs boson in the Standard Model), choosing a value of $\xi=-1$
 for this simplified model will lead to a manifest violation of unitarity at LHC energies.
