--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -15,23 +15,27 @@ Dark matter has not yet been observed in particle physics experiments, and
 there is not yet any evidence for non-gravitational interactions
 between dark matter and Standard Model particles.  If such
 interactions exist, dark matter particles could be produced
-at the LHC. Dark matter particles of themselves do not produce signals
+at the LHC. Since dark matter particles of themselves do not produce signals
 in the LHC
-detectors, so simple pair-production of dark matter particles, for example,
-would
-not be visible.
-However, there are different mechanisms by which a
-visible SM particle X(=$g, q, \gamma, Z, W$, or $h$)
-could be produced in association with dark matter.
+detectors, one way to observe them is when they are produced in association
+with a visible SM particle X(=$g, q, \gamma, Z, W$, or $h$).
+%% so simple pair-production of dark matter particles, for example,
+%% would
+%% not be visible.
+%% However, there are different mechanisms by which a
+%% could be produced in association with dark matter.
 Such reactions, which are
 observed as particles or jets recoiling against an invisible state, are
 called ``mono-X'' or \MET{}+X reactions.
+This type of reaction includes the production of a Higgs boson that
+decays to pairs of dark matter particles.
 
 
-Early Run 1 searches for \MET{}+X signatures at ATLAS and CMS employed
+Early Run-1 searches for \MET{}+X signatures at ATLAS and CMS employed
 a basis of operators in 
-effective field theories (EFTs) \cite{Goodman:2010ku} to
+effective field theories (EFTs) \cite{Goodman:2010yf,Goodman:2010ku} to
 calculate the possible signals.
+\Todo{Check these references here}
 These particular EFTs assume that production of dark matter takes place through
 a contact interaction involving a quark-antiquark pair or two gluons and
 two dark matter particles.  In this case,
@@ -39,33 +43,47 @@ the missing
 energy distribution of the signal is determined
 by the mass of the dark
 matter particles and the Lorentz structure of the interaction. Only the
-overall production rate is a free parameter. Both experiments studied a variety
+overall production rate is a free parameter to be constrained or measured.
+Both experiments studied a variety
 of EFTs with different spin structures. Provided that the contact
-interaction approximation holds, these EFTs also provide a
+interaction approximation holds, these EFTs can also provide a
 straightforward way to compare the results from different collider
-searches with non-collider searches for dark matter.
+searches with non-collider searches for dark matter.  
 
-However, it has become clear \cite{Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Busoni:2013lha} that a contact
-interaction is often not the correct description for the signals to
-which the LHC is sensitive.
-Limits from the LHC on particles that are
-QCD singlets and do not decay to hard leptons are relatively
-weak. Such particles can mediate reactions that produce dark matter
-particles. If the mass of the mediator is light, the kinematics of the
-pair-production reaction can differ substantially from that due to a contact
+
+The interpretation of some Run-1 LHC data as limits on contact interactions
+provided results that were outside the range of applicability of the EFT
+description, requiring some thought on how to handle this situation \cite{Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Shoemaker:2011vi,Busoni:2013lha}.
+Some ``simplified models'' \cite{Alwall:2008ag,Goodman:2011jq,Alves:2011wf}
+of dark matter production
+were constructed with particles and interactions beyond the SM ones.
+These models can be used consistently at LHC energies,
+and make some different predictions than the EFTs.
+Many proposals for such models have emerged (see, for example
+Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:2013xka,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba,Haisch:2015ioa}). 
+All of them introduce a new particle -- a mediator -- that allows
+interactions between SM and DM particles.
+In the limit of large mediator mass, these simplified models map onto
+EFT operators.
+%% that a contact
+%% interaction is often not the correct description for the signals to
+%% which the LHC is sensitive.
+%Limits from the LHC on particles that are
+%QCD singlets and do not decay to hard leptons are relatively
+%weak (see, for example, limits on dijet resonances for weakly-coupled
+%theories).
+%Such particles can mediate reactions that produce dark matter
+%particles.
+If the mass of the mediator is light, the kinematics of the
+dark matter production can differ substantially from that due to a contact
 interaction, modifying limits and possibly requiring new search strategies.
-While the EFT integrates
-out the degrees of freedom of the (heavy) intermediate particle,
-``simplified models'' \cite{Alwall:2008ag,Alves:2011wf} with
-directly-accessible mediators describe this richer
-phenomenology. Appropriate simplified models can be used both to
+Appropriate simplified models can be used both to
 interpret mono-X searches and to guide the design of complementary
 searches for additional signatures.
 
-Many proposals for such models began to emerge (see, for example
-Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:201489115014,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba,Haisch:2015ioa}). At
-the end of 2014, ATLAS and CMS organized a forum, the ATLAS-CMS Dark
-Matter Forum, to form a consensus with the participation of experts on
+At the end of 2014, ATLAS and CMS organized a forum, the ATLAS-CMS Dark
+Matter Forum, to form a consensus on the use of simplified models
+and EFTs for Run-2 with the participation of experts on
 theories of dark matter. This is the final report of that forum.
 
 One of the guiding principles of this report is to channel the efforts
@@ -79,12 +97,12 @@ The goal of this report is such a survey, though confined within some
 broad assumptions and focused on benchmarks for kinematically-distinct
 signals which are most urgently needed. As far as time and resources
 have allowed, the assumptions have been carefully motivated by
-theoretical consensus and comparisons of simulations. But to achieve a
-true consensus with only a few months before Run 2 would begin, it was
+theoretical consensus and comparisons of simulations. But, to achieve a
+true consensus in only a few months before the start of Run-2, it was
 important to narrow the scope and timescale to the following:
 
 \begin{enumerate}
-\item The forum should propose a prioritized, small set of benchmark
+\item The forum should propose a prioritized, compact set of benchmark
   simplified models that should be agreed upon by both collaborations for
   Run-2 searches. The values for the scan on the parameters of the models for which
   experimental results are provided should be specified, to facilitate theory reinterpretation 
@@ -96,10 +114,11 @@ important to narrow the scope and timescale to the following:
   would be desirable to have a common choice of LO/NLO, ME-parton
   shower matching and merging, factorization and renormalization
   scales for each of the simplified models. This will also lead to a
-  single set of theory uncertainties, which will be easier to deal
-  with when comparing results from the two collaborations.
-\item The forum could also discuss the conditions under which the EFT
-  interpretation may still be desirable.
+  common set of theory uncertainties, which will facilitate the
+  comparison of results between the two collaborations.
+\item The forum could also discuss how to apply the
+  EFT formalism and present the results of EFT
+  interpretations.
 \item The forum should prepare a report summarizing these items,
   suitable both as a reference for the internal ATLAS and CMS
   audiences and as an explanation for theory and non-collider
@@ -110,7 +129,7 @@ important to narrow the scope and timescale to the following:
 \section{Grounding Assumptions}
 
 We assume that interactions exist between Standard Model hadrons
-and whatever it is that constitutes cosmological dark matter. If this
+and whatever constitutes cosmological dark matter. If this
 is not the case, then proton collisions will not produce dark matter
 particles, and dark matter will not scatter off nuclei in direct
 detection experiments.
@@ -131,11 +150,14 @@ kinematic differences between models will not matter in a discovery
 scenario, and with the imminent re-start of the LHC our report relies
 heavily on a large body of existing theoretical work which made this
 assumption. Different types of dark matter particles will typically
-give similar results. The choice of Dirac fermions permits some
-processes forbidden for Majorana fermions. Aside from this, the cases
+give similar results.
+Some exceptions exist:  the choice of Dirac fermions forbids some
+processes that are allowed for Majorana fermions.
+Aside from this, the cases
 of Dirac or Majorana fermions or scalars produces only minor changes
 in the kinematic distributions of the visible particle, especially
-when considering cut-and-count analysis. Thus the choice of Dirac
+when considering cut-and-count\sidenote{Cut-and-count refers to an analysis
+that applies a certain event selection and checks the inclusive number of events which pass.   This is to be constrasted with a shape analysis that compares the distribution of events.} analysis. Thus the choice of Dirac
 fermion dark matter is deemed sufficient for the benchmarks aiding the
 design of the upcoming Run-2 searches. Nevertheless, a more complete
 set of models will certainly be required upon a discovery; see
@@ -146,8 +168,9 @@ The weakness of the dark matter--visible matter interactions is explained
 by assuming a mediating force or particle that indirectly connects the
 two.  In the EFT approach, the mass scale of the mediator is assumed
 to be large compared to the typical momentum involved in the production
-of dark matter.
-Simplified models allow the exploration of scenarios where the
+of dark matter.   Since EFTs have been established for some time,
+we focus on 
+simplified models that allow the exploration of scenarios where the
 mediating scale is not so large.
 %because the EFT approach, viable for the
 %other types of dark matter searches, breaks down at the LHC. Another
@@ -156,7 +179,8 @@ mediating scale is not so large.
 %mediator of the interaction between the dark matter and the Standard
 %Model.
 One strength of collider experiments lies in the ability to
-study the mediator, not the DM itself. A discovery of a \MET signature
+study the mediator, not just the DM. A discovery of an
+anomalous \MET signature
 at the LHC would not uniquely imply discovery of dark matter, while at
 the same time discovery of an anomalous and annually-modulated signal
 in a direct-detection experiment would leave unanswered many questions
@@ -164,9 +188,8 @@ about the nature of the interaction. The these two approaches, and
 other types of non-collider searches, provide complementary ways to
 approach the problem, and it is in this spirit that our focus is on
 the mediator. We systematically explore the basic possibilities for
-tree-level exchange: \schannel or \tchannel interactions, and
-mediators of various possible spins.
-All models are assumed to produce pairs of dark matter particles.
+mediators of various possible spins and couplings.
+All models are assumed to produce a signature with pairs of dark matter particles.
 Though more varied and
 interesting possibilities are added to the literature almost daily,
 these basic building blocks account for much of the physics studied at
@@ -174,24 +197,24 @@ hadron colliders in the past three decades.
 
 
 We also assume that Minimal Flavor Violation (MFV) \cite{Chivukula:1987py,Hall:1990ac,Buras:2000dm,D'Ambrosio:2002ex} applies to the
-recommended models. By this, we mean that the flavor structure of the
+recommended models. This means that the flavor structure of the
 couplings between dark matter and ordinary particles follows the same
 structure as the Standard Model. This choice is simple, since no
 additional theory of flavor is required, beyond what is already
 present in the SM, and it provides a mechanism to ensure that the
 models do not violate flavor constraints.  As a consequence, spin-0
-resonances exchanged in the \schannel must have couplings to fermions proportional to the SM Higgs couplings. Flavor-safe models can still be constructed beyond the MFV
+resonances must have couplings to fermions proportional to the SM Higgs couplings. Flavor-safe models can still be constructed beyond the MFV
 assumption, for example ~\cite{Agrawal:2014aoa}, and deserve further study.
 %cite Dolan:2014ska? Also DM@LHC report, if out in time. 
 
 In the parameter scan for the recommended models, we make the
 assumption of a minimal decay width for the particles mediating the
-interaction between SM and DM.  By this, we mean that only decays
+interaction between SM and DM.  This means that only decays
 strictly necessary for the self-consistency of the model (e.g.  to DM
 and to quarks) are accounted for in the definition of the mediator
 width. We forbid any further decays to other invisible particles of
-the Dark Sector that may increase the width. Studies within the Forum
-show that, for cut and count analyses, the kinematic distributions of
+the Dark Sector that may increase the width or produce striking, visible signatures. Studies within the Forum
+show that, for cut-and-count analyses, the kinematic distributions of
 many models and therefore the sensitivity of the search do not depend
 significantly on the mediator width, as long as the width remains smaller
 than the mass of the particle.
@@ -201,13 +224,13 @@ The particle content of the models chosen as benchmarks is limited to
 one single kind of DM whose self-interactions are not relevant for LHC
 phenomenology, and to one type of SM/DM interaction at a time. These
 assumptions only add a limited number of new particles to the
-SM. These simplified models, independently sought by different
+SM. These simplified models, independently explored by different
 experimental analyses, can be used as starting points to build more
 complete theories. Even though this factorized picture does not always
 lead to full theories and leaves out details that are necessary for
 the self-consistency of single models (e.g. the mass generation for
 mediator particles), it is a starting point to prepare a set of
-distinct but yet complementary collider searches for Dark Matter, as
+distinct but complementary collider searches for Dark Matter, as
 it leads to benchmarks that are easily comparable across channels.
 
 Contact interaction operators (EFTs) are also part of this report, 
