--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -7,9 +7,11 @@
 
 %As described in Section~\ref{sec:monojet_scalar}, a model with a scalar/pseudoscalar particle 
 %mediating the DM-SM interactions is one of the simplest UV completions of our EFT models.  
-With the MFV assumption, the top quark plays a primary role in the phenomenology: The model predicts not only
+With the MFV assumption, the top and possibly bottom
+quark can play a primary role in the phenomenology.
+The model predicts not only
 the monojet process described in Section~\ref{sec:monojet_scalar}, but also production of dark matter
-in association with top pairs, as illustrated in Fig.~\ref{fig:TTbarPhi}. 
+in association with top (or bottom) pairs, as illustrated in Fig.~\ref{fig:TTbarPhi}. 
 Dedicated searches including jets from heavy flavor quarks in the final state
 can be designed for this production mechanism. Another class of simplified models,  
 which includes a Dark Matter interpretation among many others, and yields a single
@@ -29,15 +31,15 @@ top quark in the final state, is detailed in Appendix~\ref{sec:singletop}.
     \fmf{phantom,tension=0,label={$\phi/a$}}{v3,v4}    
     \fmflabel{\Large $g$}{i1}
     \fmflabel{\Large $g$}{i2}
-    \fmflabel{\Large $t$}{o1}
-    \fmflabel{\Large $\bar t$}{o3}
+    \fmflabel{\Large $t (b)$}{o1}
+    \fmflabel{\Large $\bar t (\bar b)$}{o3}
     \fmflabel{\Large $\chi$}{o4}
     \fmflabel{\Large $\bar \chi$}{o5}    
   \end{feynmandiagram}
 %\caption[][\baselineskip]{Representative Feynman
 \caption{Representative Feynman
 diagram showing the pair production of dark matter particles in
-association with $t\bar t$.}
+association with $t\bar t$ (or $b\bar b$).}
 \label{fig:TTbarPhi}
 \setfloatalignment{t}
 \end{figure}
@@ -98,7 +100,10 @@ spin-0 mediators might couple more strongly to down generation quarks.
 This assumption motivates the study of final states involving $b$-quarks 
 as a complementary search to the $t\bar
 t$+DM models presented in the previous section, to directly probe the $b-$ quark coupling. 
-An example of such a model can be found in Ref.~\cite{Buckley:2014fba}
+In addition to the example illustrated in Fig.~\ref{fig:TTbarPhi}, an example of such a model can be found in Ref.~\cite{Buckley:2014fba}.
+Note that, because of the kinematics features of $b$ quark production relative
+to heavy $t$ quark production, a $b\bar b$+DM final state may only yield one
+experimentally visible $b$ quark, leading to a mono-$b$ signature in a model that conserves $b$ flavor.
 
 %\subsubsection{Parameter scan}
 
@@ -120,7 +125,7 @@ assuming a conservative 0.1\% signal efficiency.
 The kinematics is most dependent on the masses \mdm and $m_{\phi,a}$. Figure~\ref{fig:scanPhi} 
 and~\ref{fig:scanPhiPseudo} show typical dependencies for scalar and pseudoscalar couplings respectively.
 Typically, the mediator $p_T$ spectra broadens with larger $m_{\phi,a}$. 
-The kinematics are also different between on-shell ($\mMed>2\mdm$) and off-shell ($\mMed<2\mdm$) mediators as in Section~\ref{sec:monojet_scalar}. 
+The kinematics are also different between on-shell ($\mMed>2\mdm$) and off-shell ($\mMed<2\mdm$) mediators as discussed in Section~\ref{sec:monojet_scalar}. 
 Furthermore, the kinematic differences in \MET{} spectrum between scalar and pseudoscalar are larger for light mediator 
 masses with respect to heavier mediators. It is therefore important to  
 benchmark points covering on-shell and off-shell mediators with sufficient granularity, including the
