--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -3,28 +3,34 @@ Section have been proposed in Refs.~\cite{Lin:2013sca,Agrawal:2014una}. Here, DM
 
 \Todo{Spell out implications on MFV assumption.}
 
-The interest in this model lies in producing an annihilation cross section consistent with the gamma-ray excess can be achieved for perturbative values of the couplings, while being consistent with LHC constraints on the colored mediator. For parameters capable of explaining the anomalous gamma-ray signal in terms of Dark Matter coupling preferentially to $b-$ quarks, the model predicts a direct detection cross section that is consistent with current constraints, but within the near future reach of Direct Detection experiments. The model will be decisively tested with data from the upcoming high-energy run at the LHC. 
+The interest in this model lies in producing an
+annihilation cross section consistent with the gamma-ray excess
+that has
+perturbative values for the couplings and is
+consistent with LHC constraints on the colored mediator.
+For parameters capable of explaining the anomalous gamma-ray signal in terms of Dark Matter coupling preferentially to $b-$ quarks, the model predicts a direct detection cross section that is consistent with current constraints, but within the near future reach of Direct Detection experiments. The model will be decisively tested with data from the upcoming high-energy run at the LHC. 
 
 The model contains a Dirac fermion transforming as a flavor triplet. The third component of the triplet $\chi_b$ comprises the cosmological DM. A flavor singlet, color triplet scalar field $\Phi$ mediates the interactions between the DM and the Standard Model quarks.The model is similar to the MSSM with a light bottom squark and neutralino, and is thus a flavor-specific example of a \tchannel model. 
+\Todo{Why can't there by a t-specific version?}
 
 The Lagrangian considered is given by
 \begin{equation}
-  -{\cal L} \supset g \Phi^* \chi_b b_R  + {\rm h.c.}
+  -{\cal L} \supset g \Phi^* \bar\chi_b b_R  + {\rm h.c.}
 \end{equation}
 
 %The QCD production of the colored mediator introduces a tree-level $b$+MET diagram with a $g_s*g$ dependence, which could be scaled. 
 %However, the bb+MET (which often also falls in the b+MET signal region) has both pure QCD production of the colored mediator 
 %($g_s^2$) and also possibly diagrams that scale as $g_s^2*g$. 
 
-Within the framework of minimal flavor violation, the other fermions in the flavor triplet can be made sufficiently heavy and weakly-coupled that they can be neglected in the analysis.
+Within the MFV framework, the other fermions in the flavor triplet can be made sufficiently heavy and weakly-coupled that they can be neglected in the analysis.
 
 \paragraph{Parameter scan}
 
-The nature of the model doesn't allow to derive a simple scaling behavior which would allow us reduce the number of points to be simulated. This is because of the interference of diagrams with QCD production of the mediator (which scale as $g^2_s$) with diagrams that are proportional to the coupling $g$ in the $b+$\MET{} and $b\bar{b}$+\MET{} final states. Fixing the couplings also fixes the mediator width, when adopting the minimal width assumption. 
+The nature of the model is not conducive to a simple scaling behavior that would allow us reduce the number of points to be simulated. This is because of the interference of diagrams with QCD production of the mediator (which scale as $g^2_s$) with diagrams that are proportional to the coupling $g$ in the $b+$\MET{} and $b\bar{b}$+\MET{} final states. Fixing the couplings also fixes the mediator width, when adopting the minimal width assumption. 
 
-A full study of the parameter scan for this model was not available for this report; thus we recommend scanning a range of  possible widths as discussed in a more-limited way for the \schannel mono-jet, spanning from the minimal width to a value approaching the particle limit. A sizable, $O(1)$ coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks (see Section~\ref{sec:monojet_t_channel} for further discussion): Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}. The coupling could also be chosen to fulfill constraints from the relic density (see Appendix~\ref{app:Relic_Density_bFDM}, with corresponding cross sections in Tables~\ref{tab:g_relic_13T} onwards). 
+A full study of the parameter scan for this model was not available for this report; thus we recommend scanning a range of  possible widths as discussed in a more-limited way for the \schannel mono-jet, spanning from the minimal width to a value approaching the particle limit. A coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks (see Section~\ref{sec:monojet_t_channel} for further discussion): Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}. The coupling could also be chosen to fulfill constraints from the relic density (see Appendix~\ref{app:Relic_Density_bFDM}, with corresponding cross sections in Tables~\ref{tab:g_relic_13T} onwards). 
 
-A scan of Dark Matter and mediator masses should be done in the on-shell region $MPhi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data, spanning from 10 to 500 GeV in \mDM and from 10 to 1300 GeV in \mMed. 
+A scan of Dark Matter and mediator masses should be done in the on-shell region $M_\Phi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data, spanning from 10 to 500 GeV in \mDM and from 10 to 1300 GeV in \mMed. 
 
 %  \item $\mDM=10-500$ GeV with a binning of 50 GeV for $\mDM<100$ and  100 GeV otherwise; 
 %  \item $MPhi=10-1300$ with a binning of 100 GeV;
