--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -13,7 +13,8 @@
 The preceding sections address models with a Dirac fermion coupled to
 the SM through exchange of a neutral spin-0 or spin-1 in an
 \schannel process.  A \tchannel process may couple the SM and DM
-directly, leading to a different phenomenology.  Here, we examine a
+directly, leading to a different phenomenology.
+For completeness, we examine a
 model where $\chiDM$ is a Standard Model (SM) singlet, a Dirac
 fermion% dropped after comments from Tom Rizzo and Uli Haisch
 %\footnote{Though outside the scope of this report, a colored
@@ -24,7 +25,7 @@ fermion% dropped after comments from Tom Rizzo and Uli Haisch
 ; the
 mediating particle, labeled $\phi$, is charged and coloured; and the
 SM particle is a quark. Such models have been studied in
-Refs.~\cite{An:2013xka,Papucci:2014iwa}.
+Refs.~\cite{An:2013xka,Papucci:2014iwa}.  However, this model has not been studied extensively in this forum.
 
 Following the example of Ref.~\cite{Papucci:2014iwa}, the interaction Lagrangian is written as
 
@@ -34,17 +35,22 @@ Following the example of Ref.~\cite{Papucci:2014iwa}, the interaction Lagrangian
 
 where $Q_L^i$, $u_R^i$ and $d_R^i$ are the SM quarks and $\phi_L^i$, $\phi_{uR}^i$ and $\phi_{dR}^i$ are the corresponding mediators, which 
 (unlike the \schannel mediators) must be heavier than $\chiDM$. 
-These mediators have SM gauge representations under $(SU(3), SU(2))_Y$ of $(3,2)_{-1/6}$, $(3,1)_{2/3}$ and $(3,1)_{-1/3}$ respectively. Variations of the model previously studied in the literature include coupling to the left-handed quarks only~\cite{Chang:2014, Busoni:2014haa}, to the $\phi_{uR}^i$ \cite{Tait:2013} or $\phi_{dR}^i$ \cite{Papucci:2014iwa, Yavin:14092893}, or some combination~\cite{Bai:201311171, An:201489115014}.
+These mediators have SM gauge representations under $(SU(3), SU(2))_Y$ of $(3,2)_{-1/6}$, $(3,1)_{2/3}$ and $(3,1)_{-1/3}$ respectively. Variations of the model previously studied in the literature include coupling to the left-handed quarks only~\cite{Chang:2013oia, Busoni:2014haa}, to the $\phi_{uR}^i$ \cite{Tait:2013} or $\phi_{dR}^i$ \cite{Papucci:2014iwa, Yavin:14092893}, or some combination~\cite{Bai:2013iqa, An:2013xka}.
 
-\vspace{5mm}
+%\vspace{5mm}
 
-As for the \schannel models, we assume Minimal Flavor Violation (MFV), setting the mediator masses for each flavor equal; the same logic also applies to the couplings $g$. Coupling to the third generation breaks the MFV assumption and is thus forbidden. The free parameters are then
+As for the \schannel models, we assume Minimal Flavor Violation (MFV),
+setting the mediator masses for each flavor equal;
+the same logic also applies to the couplings $g$.
+%Coupling to the third generation breaks the MFV assumption and is thus forbidden.
+The free parameters are then
 
 \begin{equation}
 \{ \mDM,\, \Mphi,\, g\}.
 \end{equation}
 
-\vspace{5mm}
+\Todo{What about Tait model?}
+%\vspace{5mm}
 
 The minimal width of each mediator is expressed, using the example of decay to an up quark, as
 
@@ -63,30 +69,32 @@ which reduces to
 \end{equation}
 in the limit $M_{\phi_i}, \mDM \gg m_{u_i}$.
 
-\vspace{5mm}
+%\vspace{5mm}
 
-We note that in SUSY models, the width is generally fixed by the couplings assumed in the model,
-while it could be wider in case of large \mDM, leading to different kinematic distributions between
-the two kinds of benchmarks. 
+%% We note that in SUSY models, the width is generally fixed by the couplings assumed in the model,
+%% while it could be wider in case of large \mDM, leading to different kinematic distributions between
+%% the two kinds of benchmarks. 
 
 The leading-order processes involved in MET+jet production are shown
 in Fig. \ref{fig:tchannelMonojet}.
 Note that the generation index for $\phi$ is linked to the incoming
-fermion(s).   Thus, mono-jet production via $\phi^3_u$ is not possible at
-this order, while production through $\phi^3_d$ is suppressed by
-the $b$ parton PDF.
+fermion(s).
+%Thus, mono-jet production via $\phi^3_u$ is not possible at
+%this order, while production through $\phi^3_d$ is suppressed by
+%the $b$ parton PDF.
 This model can also give a signal in the di-jet +
 MET channel when, for example, the $\chiDM$ is exchanged in the
 \tchannel and the resulting $\phi$ pair each decay to a jet +
 $\chiDM$. Fig.~\ref{fig:tchannelDijet} shows the leading order diagrams.
-Except for the $gg$ induced process, di-jet production
-through $\phi^3_u$ is not possible, and production through $\phi^3_d$ is
-again suppressed.   The diagram involving the \tchannel exchange
+%Except for the $gg$ induced process, di-jet production
+%through $\phi^3_u$ is not possible, and production through $\phi^3_d$ is
+%again suppressed.
+The diagram involving the \tchannel exchange
 of $\chiDM$ is strongly dependent upon the Dirac fermion assumption.
 For a Majorana fermion, $q\bar q,\bar q\bar q,$ and $qq$ production
 would be possible with the latter having a pronounced enhancement
 at the LHC.
-
+\Todo{Get clarification of the case similar to a top squark}
 
 This model is similar to the simplified model considered in SUSY searches, implemented as the MSSM with only light squarks and
 a neutralino, except for two distinct points:  the $\chiDM$ is
@@ -354,7 +362,7 @@ of this model with specific examples for the Z+\MET final state.
 
 Figure~\ref{fig:TChan_EW_Zhad_MET} shows the \MET distribution for the hadronic Z+\MET final state, 
 with varying dark matter and mediator mass, before any selection. 
-The acceptance for a series of simplified analysis cuts 
+The acceptance for a series of basic analysis selections
 (\MET$>$350~\gev, leading jet $p_T >$ 40~\gev, minimum azimuthal angle between jet and \MET > 0.4) 
 applied at the generator level is shown in Figure~\ref{fig:TChan_EW_Zhad_acc}. 
 
@@ -374,8 +382,9 @@ applied at the generator level is shown in Figure~\ref{fig:TChan_EW_Zhad_acc}.
 	\label{fig:TChan_EW_Zhad_acc}
 \end{figure}
 
-The parameter scan for the $t-$ channel model in the case of signatures including EW bosons
-follows that of the monojet case. 
+The discussion of the parameter scan for the $t-$ channel model
+in the case of signatures including EW bosons
+parallels that of the monojet case. 
 %with the difference that in this case the kinematics does 
 %not depend on the width. 
 
